<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_light_white"
        android:clickable="true"
        android:orientation="vertical">


        <TextView
            android:id="@+id/trackName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="trackName"
            android:textColor="@android:color/black"
            android:textSize="@dimen/search"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:orientation="vertical"
                android:paddingLeft="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:minHeight="48dp"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:gravity="center_horizontal"
                        android:text="@string/artistName"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/normal_text"/>

                    <TextView
                        android:id="@+id/artistName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:gravity="center_horizontal"
                        android:maxLines="1"
                        android:textSize="@dimen/normal_text"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:gravity="center_horizontal"
                        android:text="@string/price"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/normal_text"/>

                    <TextView
                        android:id="@+id/priceValue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:gravity="center_horizontal"
                        android:maxLines="1"
                        android:text="3"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:minHeight="48dp"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:gravity="center_horizontal"
                        android:text="@string/genre"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/normal_text"/>

                    <TextView
                        android:id="@+id/genre"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:gravity="center_horizontal"
                        android:maxLines="1"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:minHeight="48dp"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:gravity="center_horizontal"
                        android:text="@string/country"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/normal_text"/>

                    <TextView
                        android:id="@+id/country"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:gravity="center_horizontal"
                        android:maxLines="1"
                        android:text="3"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:minHeight="48dp"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"

                        android:gravity="center_horizontal"
                        android:text="@string/duration"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/normal_text"/>

                    <TextView
                        android:id="@+id/duration"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:gravity="center_horizontal"
                        android:maxLines="1"
                        android:text="3.9"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:minHeight="48dp"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:gravity="center_horizontal"
                        android:text="@string/isStreamable"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/normal_text"/>

                    <TextView
                        android:id="@+id/isStreamable"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:gravity="center_horizontal"
                        android:maxLines="1"
                        android:text="3"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:minHeight="48dp"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:gravity="center_horizontal"
                        android:text="@string/trackCount"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/normal_text"/>

                    <TextView
                        android:id="@+id/trackCount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:gravity="center_horizontal"
                        android:maxLines="1"
                        android:text="3"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:minHeight="48dp"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:gravity="center_horizontal"
                        android:text="@string/collectionPrice"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/normal_text"/>

                    <TextView
                        android:id="@+id/collectionPrice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:gravity="center_horizontal"
                        android:maxLines="1"
                        android:text="3"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:minHeight="48dp"
                    android:weightSum="10">

                    <TextView
                        android:id="@+id/songDownload"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:gravity="center_horizontal"
                        android:text="@string/download"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/search"/>

                    <TextView
                        android:id="@+id/songPlay"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:gravity="center_horizontal"
                        android:text="Play"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/search"
                        android:visibility="gone"/>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>