<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/card_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    card_view:cardCornerRadius="@dimen/card_album_radius"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10">

            <TextView
                android:id="@+id/trackName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:maxLines="1"
                android:text="trackName"
                android:textColor="@android:color/black"
                android:textSize="@dimen/search"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <ImageView
                android:id="@+id/imgThumb"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3.5"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_launcher"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="6.5"
                android:orientation="vertical"
                android:paddingLeft="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:text="@string/artistName"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/normal_text"/>

                    <TextView
                        android:id="@+id/artistName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:layout_weight="6"
                        android:textSize="@dimen/normal_text"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:text="@string/genre"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/normal_text"/>

                    <TextView
                        android:id="@+id/genre"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:gravity="start"
                        android:maxLines="1"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:gravity="start"
                        android:text="@string/duration"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/normal_text"/>

                    <TextView
                        android:id="@+id/duration"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:gravity="start"
                        android:maxLines="1"
                        android:text="3.9"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:gravity="start"
                        android:text="@string/price"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/normal_text"/>

                    <TextView
                        android:id="@+id/priceValue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:gravity="start"
                        android:maxLines="1"
                        android:text="3"/>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/collectionName"
                android:textColor="@android:color/black"
                android:textSize="@dimen/normal_text"/>

            <TextView
                android:id="@+id/collectionName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginStart="@dimen/margin_medium"
                android:maxLines="2"
                android:text="Vashi"/>

        </LinearLayout>


    </LinearLayout>
</android.support.v7.widget.CardView>